@@ -1,5 +1,5 @@
 /* Hello, Emacs: this is -*-C-*- !
- * $Id: cairo.trm,v 1.69 2014/05/05 22:19:21 sfeam Exp $
+ * $Id: cairo.trm,v 1.71 2014/07/01 14:46:25 sfeam Exp $
  */
 
 /* GNUPLOT - cairo.trm */
@@ -1009,7 +1009,7 @@ void cairotrm_put_text(unsigned int x, unsigned int y, const char * string)
 	* we get stuck in an infinite loop) and try again. */
 
 	while (*(string = enhanced_recursion((char*)string, TRUE, 
-			plot.fontname, plot.fontsize,
+			cairo_params->fontname, plot.fontsize,
 			0.0, TRUE, TRUE, 0))) {
 		cairotrm_enhanced_flush();
 
