@@ -8,6 +8,7 @@ Changes in 5.0.rc3
 * FIX revert arrowhead changes introduced in -rc1
 * FIX lua terminal support for LT_NODRAW, RGBA linecolors
 * FIX stats code was confusing x- and y- dimensions of matrix data
+* FIX track :Italic and :Bold given in "set term" for cairo terminals
 
 Changes in 5.0.rc2
 ==================
